--- a/css/style.css
+++ b/css/style.css
@@ -53,16 +53,16 @@ body{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5x;
+    border-bottom-width: 2px;
+    border-left-width: 5x;
  }
 
  .blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
  }
  .blue > h2, .blue > p{
     color: #C4C4C4;
@@ -72,19 +72,19 @@ body{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
  }
  .yellow > p{
     color:#707070;
  }
 
  .green{
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
  }
 
  footer{
