--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    font-family: arial, verdana;
+    font-family: Arial, Verdana;
     background-color: #000000;
     color: #ffffff;
     margin-top: 20px;
@@ -11,6 +11,7 @@ body{
  h1{
     text-align: center;
     padding: 15px;
+    font-size: 42px;
  
  }
 
@@ -53,16 +54,14 @@ body{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom-width: 2px;
-    border-left-width: 5x;
+    border-width: 0px 0px 2px 5px;
  }
 
  .blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right-width: 5px;
-    border-top-width: 2px;
+    border-width: 2px 5px 0px 0px;
  }
  .blue > h2, .blue > p{
     color: #C4C4C4;
@@ -72,8 +71,7 @@ body{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-right-width: 5px;
-    border-top-width: 2px;
+    border-width: 0px 0px 2px 5px;
  }
  .yellow > p{
     color:#707070;
@@ -85,6 +83,7 @@ body{
     margin-right: 50px;
     border-right-width: 5px;
     border-top-width: 2px;
+    border-width: 2px 5px 0px 0px;
  }
 
  footer{
